---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
description: "This is a Mermaid graph. You can use https://mermaid.live to visualize it as a diagram."
---
## Function 0
### Source
```python
def func():
    pass
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["pass\n"]

  start --> block0
  block0 --> return
```

## Function 1
### Source
```python
def func():
    pass
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["pass\n"]

  start --> block0
  block0 --> return
```

## Function 2
### Source
```python
def func():
    return
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["return\n"]

  start --> block0
  block0 --> return
```

## Function 3
### Source
```python
def func():
    return 1
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 1\n"]

  start --> block0
  block0 --> return
```

## Function 4
### Source
```python
def func():
    return 1
    return "unreachable"
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["return #quot;unreachable#quot;\n"]
  block1["return 1\n"]

  start --> block1
  block1 --> return
  block0 --> return
```

## Function 5
### Source
```python
def func():
    i = 0
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["i = 0\n"]

  start --> block0
  block0 --> return
```

## Function 6
### Source
```python
def func():
    i = 0
    i += 2
    return i
```

### Control Flow Graph
```mermaid
flowchart TD
  start(("Start"))
  return(("End"))
  block0["i = 0\ni += 2\nreturn i\n"]

  start --> block0
  block0 --> return
```


